again, anthony doesn't have access to this git, we liveshared. Finished sys_trace() and sysinfo()

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,12 @@
         "atomic": "cpp",
         "complex": "c",
         "typeindex": "c",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "future": "c",
+        "istream": "c",
+        "syscall.h": "c",
+        "spinlock.h": "c",
+        "proc.h": "c",
+        "defs.h": "c"
     }
 }
